# lineage

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  bump-version  pyproject.toml  requirements-dev.txt  requirements.txt  setup-env  setup.py
.github/: dependabot.yml  labeler.yml  labels.yml  lineage.yml
.github/workflows/: build.yml  codeql-analysis.yml  lineage_scan.yml
src/example/: _version.py  example.py
src/example/data/: __init__.py
src/lineage/: __init__.py  _version.py  cli.py  entrypoint.py
src/lineage/templates/: conflict_template.md
tests/: test_lineage.py
