# For more information about configuring project metadata for the
# setuptools build backend, please see
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
    { name = "Cybersecurity and Infrastructure Security Agency", email = "github@cisa.dhs.gov" }
]
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "docopt",
    "schema",
]
description = "Example Python library"
dynamic = ["readme", "version"]
keywords = ["skeleton"]
license = "CC0-1.0"
name = "example"
requires-python = ">=3.9"

[project.optional-dependencies]
# IMPORTANT: Keep type hinting-related dependencies of the dev section
# in sync with the mypy pre-commit hook configuration (see
# .pre-commit-config.yaml). Any changes to type hinting-related
# dependencies here should be reflected in the additional_dependencies
# field of the mypy pre-commit hook to avoid discrepancies in type
# checking between environments.
dev = [
    "types-docopt",
    "types-setuptools",
]
test = [
    "coverage",
    "coveralls",
    "pre-commit",
    "pytest-cov",
    "pytest",
]

[project.scripts]
example = "example.example:main"

[project.urls]
homepage = "https://github.com/cisagov/skeleton-python-library"
issues = "https://github.com/cisagov/skeleton-python-library/issues"
# Landing page for CISA's cybersecurity mission
mission = "https://www.cisa.gov/cybersecurity"
source = "https://github.com/cisagov/skeleton-python-library"

[tool.pytest.ini_options]
# Increase verbosity, display extra test summary info for tests that
# did not pass, display code coverage results, and enable debug
# logging.
addopts = "--verbose -ra --cov --log-cli-level=DEBUG"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "example._version.__version__"}

[tool.setuptools.package-data]
example = ["data/*.txt"]
